# cedarscript-grammar

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  grammar.js  package.json  pyproject.toml
.github/: dependabot.yml
cedarscript_grammar/: __init__.py
proposals/: README.md
proposals/LLM Tool Interface/: README.md
proposals/browser-extension/: README.md
proposals/capture-external-command-output/: README.md
proposals/model-fine-tuning/: README.md
proposals/onboarding-features/: README.md
proposals/tree-sitter-query-language/: README.md
src/cedarscript_grammar/: __init__.py
test/corpus/: create.txt  misc.txt  mv.txt  rm.txt  select.txt  update.txt
test/corpus/update/: edge-cases.txt  identifier-from-file.txt  line-markers.txt  move-segment.txt  move.body-whole-line.txt  move.case.txt  project.txt  replace.with.case.txt  replace.with.ed.txt  replace.with.segment.txt  single-file.txt
tests/: test_language.py
