[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cedarscript-grammar"
dynamic = ["version"]
description = "CEDARScript grammar.js for tree-sitter"
authors = [
    {name = "Elifarley", email = "cedarscript@orgecc.com"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed"
]
keywords = ["parser", "tree-sitter", "ast", "cedarscript", "code-editing", "refactoring", "code-analysis", "sql-like", "ai-assisted-development", "python-binding"]
requires-python = ">=3.8"
dependencies = [
    "tree-sitter~=0.21",
]

[project.urls]
Homepage = "https://github.com/CEDARScript/cedarscript-grammar#readme"
Repository = "https://github.com/CEDARScript/cedarscript-grammar.git"
Documentation = "https://github.com/CEDARScript/cedarscript-grammar#readme"
"Bug Tracker" = "https://github.com/CEDARScript/cedarscript-grammar/issues"

[tool.setuptools]
packages = ["cedarscript_grammar"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "cedarscript_grammar.__version__"}

[tool.setuptools.package-data]
"cedarscript_grammar" = ["py.typed", "*.so", "*.dylib", "*.dll"]


[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
